[gd_scene load_steps=22 format=2]

[ext_resource path="res://information.gd" type="Script" id=2]
[ext_resource path="res://介面/資訊欄最新版.png" type="Texture" id=3]
[ext_resource path="res://介面/資訊欄最新版標題欄.png" type="Texture" id=4]
[ext_resource path="res://按鈕/資訊欄收合.png" type="Texture" id=5]
[ext_resource path="res://font/SourceHanSerifTW-Medium.otf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 6
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 6
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 6
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 6
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 6
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 6
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 6
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 6
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]
size = 6
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
size = 6
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=11]
size = 6
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=12]
size = 6
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=13]
size = 5
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=14]
size = 6
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=15]
size = 6
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=16]
size = 6
font_data = ExtResource( 6 )

[node name="information" type="Sprite"]
script = ExtResource( 2 )

[node name="background" type="Sprite" parent="."]
visible = false
position = Vector2( 112.393, 67.9348 )
scale = Vector2( 1.1358, 1.43796 )
texture = ExtResource( 3 )

[node name="top" type="Sprite" parent="."]
position = Vector2( 111.976, 7.36649 )
scale = Vector2( 1.13883, 1.55559 )
texture = ExtResource( 4 )

[node name="subject" type="Label" parent="."]
visible = false
margin_left = 84.0
margin_top = 20.0
margin_right = 164.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="number" type="Label" parent="."]
visible = false
margin_left = 84.0
margin_top = 38.0
margin_right = 164.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="."]
visible = false
margin_left = 84.0
margin_top = 54.0
margin_right = 163.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nickname" type="Label" parent="."]
visible = false
margin_left = 84.0
margin_top = 72.0
margin_right = 163.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total_puzzle" type="Label" parent="."]
visible = false
margin_left = 138.0
margin_top = 122.0
margin_right = 164.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
visible = false
margin_left = 84.0
margin_top = 106.0
margin_right = 163.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="team" type="Label" parent="."]
visible = false
margin_left = 84.0
margin_top = 88.0
margin_right = 163.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total_point" type="Label" parent="."]
visible = false
margin_left = 84.0
margin_top = 123.0
margin_right = 117.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heading" type="Label" parent="."]
margin_left = 72.3764
margin_top = 5.5811
margin_right = 112.376
margin_bottom = 14.5811
custom_fonts/font = SubResource( 9 )
text = "個人資訊"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="subject_heading" type="Label" parent="."]
visible = false
margin_left = 66.0
margin_top = 20.0
margin_right = 83.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "學系"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="number_heading" type="Label" parent="."]
visible = false
margin_left = 65.0
margin_top = 37.0
margin_right = 83.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 11 )
text = "學號"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nickname_heading" type="Label" parent="."]
visible = false
margin_left = 65.0
margin_top = 71.0
margin_right = 84.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 12 )
text = "暱稱"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total_puzzle_heading" type="Label" parent="."]
visible = false
margin_left = 118.159
margin_top = 121.809
margin_right = 137.159
margin_bottom = 137.809
custom_fonts/font = SubResource( 13 )
text = "拼圖
總數"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total_point_heading" type="Label" parent="."]
visible = false
margin_left = 65.0
margin_top = 123.0
margin_right = 83.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 14 )
text = "總分"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title_heading" type="Label" parent="."]
visible = false
margin_left = 66.0
margin_top = 106.0
margin_right = 82.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 14 )
text = "稱號"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name_heading" type="Label" parent="."]
visible = false
margin_left = 64.0
margin_top = 54.0
margin_right = 84.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 15 )
text = "姓名"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="team_heading" type="Label" parent="."]
visible = false
margin_left = 65.0
margin_top = 89.0
margin_right = 84.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 16 )
text = "隊名"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="TextureButton" parent="."]
margin_left = 147.285
margin_top = 3.66615
margin_right = 162.285
margin_bottom = 18.6661
__meta__ = {
"_edit_use_anchors_": false
}

[node name="unfold_picture" type="Sprite" parent="."]
position = Vector2( 154.77, 12.0686 )
scale = Vector2( 0.197698, 0.203029 )
texture = ExtResource( 5 )

[node name="fold_picture" type="Sprite" parent="."]
visible = false
position = Vector2( 154.341, 10.3392 )
scale = Vector2( 0.18942, 0.180091 )
texture = ExtResource( 5 )
flip_v = true
[connection signal="pressed" from="button" to="." method="_on_button_pressed"]
